--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alekszilagyi.moraviandailytexts" >
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-sdk android:minSdkVersion="15"
         android:targetSdkVersion="21" />
 
@@ -20,8 +21,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="Settings">
+            android:name=".settings.SettingsActivity"
+            android:label="Settings"
+            android:parentActivityName="com.example.alekszilagyi.moraviandailytexts.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.alekszilagyi.moraviandailytexts.MainActivity" />
         </activity>
         <activity
             android:name=".AboutActivity"
@@ -31,6 +36,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.alekszilagyi.moraviandailytexts.MainActivity" />
         </activity>
+        <receiver android:name=".utilities.NotificationReceiver" />
     </application>
 
 </manifest>
